--- a/apps/main/src/index.html
+++ b/apps/main/src/index.html
@@ -8,6 +8,6 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
   <body>
-    <pomodoro-app-root></pomodoro-app-root>
+    <app-root></app-root>
   </body>
 </html>
